installed: removed it pm/*: scripts that care about 'installed' now just touch it if it's missing.
R=nix-dev, rminnich
CC=nix-dev
http://codereview.appspot.com/4999044

--- a/rc/bin/pm/install
+++ b/rc/bin/pm/install
@@ -19,6 +19,10 @@ if (~ $#* 0) {
 	exit 'invalid arg'
 }
 
+if (! test -e $ROOT^/contrib/packages/installed) {
+	touch $ROOT^/contrib/packages/installed
+}
+
 for (PKGNAME in $*) {
 	@{	
 		echo '•••Installing package '^$PKGNAME^'•••'
