README: updated the readme.
R=nix-dev
CC=nix-dev
http://codereview.appspot.com/5141048

--- a/contrib/packages/print/kertex/README
+++ b/contrib/packages/print/kertex/README
@@ -1,3 +1,4 @@
-TeX and LaTeX for Plan 9, from T. Laronde's kerTeX distribution. You'll need to set KERTEXINPUTS to use latex or dvips.
+TeX and LaTeX for Plan 9, from T. Laronde's kerTeX distribution
+(http://www.kergis.com/en/kertex.html)
 
 Packaged by: John Floren
